# diffbot_nav2

./: README.md
astar_algorithm/: CMakeLists.txt  package.xml
astar_algorithm/remote_control/: ps4.py
astar_algorithm/scripts/: pure_pursuit_yolo.py
astar_algorithm/src/: astar_origi.py  astar_static_map01.py  astar_static_map02.py  astar_test1.py  astar_test1_v2.py  astar_test2.py  astar_test3.py  astar_test4_v2.py  astar_test5.py  astar_test5_v2.py  astar_test6.py  astar_test6_v2.py  astar_test6_v3.py  astar_test_dynamic.py  astar_test_with_p_controller.py  astarnew_v1.py  astarnew_v2.py  astarnew_v3.py  odom.py  pcontroller.py  pure_pursuit_control.py  pure_pursuit_control02.py  pure_pursuit_control03.py  pure_pursuit_control04.py  pure_pursuit_control05.py  pure_pursuit_yolo.py  pure_pursuit_yolo02.py  stanley_controller.py
model_editor_models/ball/: model.sdf
model_editor_models/ball2/: model.config  model.sdf
model_editor_models/ball3/: model.config  model.sdf
model_editor_models/bb/: model.config  model.sdf
model_editor_models/world_ball/: model.config  model.sdf
nav_controller/: setup.py
nav_controller/nav_controller/: astar.py  control.py  control2.py  control_astar.py  control_t01.py  control_t02.py
pid_controller/: CMakeLists.txt  package.xml
pid_controller/src/: pid_test1.py  pid_test2.py  pid_test3.py
robot_differential/: CMakeLists.txt  map.pgm  map.yaml  package.xml
robot_differential/config/: mapper_params_online_async.yaml
robot_differential/launch/: cartographer.launch.py  display.launch.py  farmrobot_gazebo.launch.py  farmrobot_v2gazebo.launch.py  gazebo_display.launch.py  gz_burger.launch.py  localization.launch.py  main_robot.launch.py  map_server.launch.py  map_server02.launch.py  map_server03.launch.py  nav2_main.launch.py  navigation.launch.py  occupancy_grid.launch.py  online_async_launch.py  open_map.launch.py  pose_pub.launch.py  real_robot.launch.py  robot_nav2.launch.py  rplidar.launch.py  rviz2_display.launch.py  slam.launch.py  slamV2.launch.py  test_localization.launch.py  test_nav2.launch.py
robot_differential/map/: astar_map.pgm  astar_map.yaml  frames.gv  my_map_serial.data  report_map.pgm  report_map.yaml  saved_map01.pgm  saved_map01.yaml  saved_map02.pgm  saved_map02.yaml  saved_map03.pgm  saved_map03.yaml
robot_differential/rviz/: astar_testmap.rviz  new_robot.rviz  new_robot2.rviz  new_robot3.rviz  report_robot.rviz  robot.rviz
robot_differential/scripts/: pose_pub.py
robot_differential/src/: keyboard_listener.py  pose_pub(default).py  pose_pub.py
robot_differential/world/: bongworld.sdf  small_warehourse.world  yolo_world.sdf
robot_differential/world/bongworld/: model.config  model.sdf
robot_differential/world/our_world/: model.sdf  robot.model
rviz_real_robot/: lidar1.py  rviz.launch.py  rviz2_display.launch.py
wheel_robot/: CMakeLists.txt  package.xml
wheel_robot/launch/: display.launch.py  first_display.launch.py
wheel_robot/rviz/: testing_urdf.rviz  urdf_test.rviz
wheel_robot/src/description/: wheel_robot.urdf
wheel_robot/world/: my_world.sdf
yolobot_recognition/: CMakeLists.txt
yolobot_recognition/scripts/: sign_detect.py  sign_distance.py  yolov8_ros2_pt.py
yolov8_msgs/: CMakeLists.txt
yolov8_msgs/msg/: InferenceResult.msg  ObjectDistance.msg
