<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_differential</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="viphu@todo.todo">viphu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>std_srvs</build_depend>


  <!-- <build_depend>tf2</build_depend> -->
  <!-- <build_depend>tf2_msgs</build_depend> -->
  <build_depend>tf2_ros</build_depend>
  <!-- <build_depend>tf2_geometry_msgs</build_depend> -->
  
  <exec_depend>joint_state_publisher</exec_depend>
  <!--Test-->
  <!-- <exec_depend>joint_state_publisher_gui</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend> -->
  <!-- <exec_depend>robot_localization</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
